Create resources for categories, implement tests and document new endpoints with swagger
