# config/routes.rb
@@ -11,6 +11,7 @@ Rails.application.routes.draw do
       end
       resources :companies, only: %i[show]
       resources :profiles, only: %i[show update]
+      resources :categories, only: %i[index create update destroy]
       resources :posts, only: %i[index create update destroy] do
         # "v1/posts/:post_id/restore"
         post 'restore'
